jenkins/master.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: samples
spec:
  selector:
    app: jenkins
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: jenkins
  namespace: samples
spec:
  serviceName: jenkins
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: registry.samples.svc.cluster.local:5000/sample/jenkins
        ports:
        - containerPort: 8080
        - containerPort: 50000
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-home
        - mountPath: /run/secrets/jenkins_account
          name: jenkins-account
          readOnly: true
        resources:
          limits:
            cpu: 0.5
            memory: 500Mi
          requests:
            cpu: 0.5
            memory: 500Mi
      volumes:
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-home
      - name: jenkins-account
        secret:
          secretName: jenkins-account
