jenkins/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: samples
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
    - jenkins.minikube.test
  rules:
  - host: jenkins.minikube.test
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
